force-app/main/default/objects/CalabrioIntegration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>contains settings for Calabrio Integration</description>
    <fields>
        <fullName>AllowCallout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowCallout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowedStaff__c</fullName>
        <description>Selected monash staff callout will be allowed in the first run.</description>
        <label>AllowedStaff</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CalabrioURL__c</fullName>
        <label>CalabrioURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CalabrioIntegration</label>
</CustomObject>